= reposurgeon project news =

Repository head::
     Change repocutter -f (basename) option to -n.
     Default filecopy to matching a regexp; -f now undoes this.
     Add repocutter count command.
     Repocutter opatches missing copyfrom source revisions.

4.33: 2022-12-21::
     Some potentially unsafe shellouts have been fixed.
     Format --fossil is no loinger broken.
     Fix segfault when listing descendants of orphaned commit.
     Ensure that repocutter is quieted when output is not stdout.

4.32: 2022-04-28::
     "lint" command no longer accidentally clears most Q bits.
     repocutter renumber no longer mangles mergeinfo properties.
     Fixed mergeinfo handling in repoocutter commands that remove revisions.
     Interactive lint listing is interruptible.
     Significant bugfixes and major code simplification in repocutter swapsvn.
     repocutter push is restricted by pathmatch rather than range.
     repocutter push can be pattern-restricted.
     All repocutter commands with a pattern rsetruction match against segments.
     Added new repocutter setcopyfrom and setpath commands.
     Add -o option to pass raw options into repotool checkout.

4.31: 2022-01-08::
     Minor improvements in baton handling.
     repocutter pathrename/sift/expunge REs now match only full path segments.
     --nobranch/--branchify are gone; use repocutter to prep nonstandard repos.
     repocutter reduce now has simpler behavior and can take input from stdin.
     reposurgeon incorporarte can handle symlinks
     repocutter can now select and deselect node spans within revisions.
     In repocutter sift/expunge, new -f option disables regexp interpretation.
     In repocutter, new skipcopy and filecopy commands.
     In Subversion IDs, uniform use of .-notation for node indices.

4.30: 2021-10-13::
     Speed up DoTagify by parallelizing it.
     =J selection gets all commits and tags with non-ASCII metadata
     Added msgin --relax option.