@@ -4,7 +4,8 @@ Repository head::
      Change repocutter -f (basename) option to -n.
      Default filecopy to matching a regexp; -f now undoes this.
      Add repocutter count command.
-     Repocutter opatches missing copyfrom source revisions.
+     Repocutter patches missing copyfrom source revisions.
+     Added repocutter swapcheck command for sanity checking.
 
 4.33: 2022-12-21::
      Some potentially unsafe shellouts have been fixed.
